@@ -12,6 +12,8 @@ import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 /**
@@ -29,7 +31,11 @@ public class UrlValidationService {
         if (urlWhitelistConfiguration.getWhitelist().stream().noneMatch(urlString::startsWith)) {
             throw new CseValidPublicationInvalidDataException(String.format("URL '%s' is not part of application's whitelisted url's.", urlString));
         }
-        URL url = new URL(urlString);
-        return url.openStream(); // NOSONAR Usage of whitelist not triggered by Sonar quality assessment, even if listed as a solution to the vulnerability
+        try {
+            URL url = new URI(urlString).toURL();
+            return url.openStream(); // NOSONAR Usage of whitelist not triggered by Sonar quality assessment, even if listed as a solution to the vulnerability
+        } catch (URISyntaxException | IllegalArgumentException e) {
+            throw new CseValidPublicationInvalidDataException(String.format("Cannot download resource from URL '%s'", urlString), e);
+        }
     }
 }
